--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "homepage": "/drum-machine",
     "scripts": {
+        "predeploy": "npm run build",
         "deploy": "gh-pages -d dist",
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -36,5 +37,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^3.1.0"
     }
 }
