--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "react-scripts": "4.0.0",
         "web-vitals": "^0.2.4"
     },
-    "homepage": "/drum-machine",
+    "homepage": "https://jsxthai.github.io/drum-machine",
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d dist",
